# sigproc_filterbank

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: errors.rs  lib.rs  parser.rs  read.rs  serialization.rs  write.rs
tests/: header.fil
